tests/ui/enum_var_no_key.stderr
error: fixcol-derive error: The parameter key must be provided for all enum variants.

        Try adding #[fixcol(key = "<my key>")] to this variant.
  --> tests/ui/enum_var_no_key.rs:15:5
   |
15 |     Thing2(MyStruct),
   |     ^^^^^^

error: fixcol-derive error: The parameter key must be provided for all enum variants.

        Try adding #[fixcol(key = "<my key>")] to this variant.
  --> tests/ui/enum_var_no_key.rs:21:5
   |
21 |     Thing1(#[fixcol(width = 5)] u16),
   |     ^^^^^^
